<resources>
    <string name="app_name">Wallet</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="transaction_amountTV">Amount</string>
    <string name="transaction_amount_hint">Transaction amount</string>
    <string name="expense_radio">Expense</string>
    <string name="income_radio">Income</string>
    <string name="note_transactionTV">Note (Optional)</string>
    <string name="note_transaction_hint">Transaction description</string>
    <string name="dateTV">Date</string>
    <string name="timeTV">Time</string>
    <string name="categoryTV">Category</string>
    <string name="add_transactionBT">Add Transaction</string>
    <string name="account_nameTV">Account Name</string>
    <string name="name_accountTV">Name</string>
    <string name="cash_radio">Cash</string>
    <string name="bank_radio">Bank</string>
    <string name="initial_value_account_TV">Initial Value</string>
    <string name="add_accountBT">Add Account</string>
    <string name="update_accountBT">Update Account</string>
    <string name="saving_amountTV">Saving amount:</string>
    <string name="add_saved_amountBT">Add Saved amount</string>
    <string name="set_goal_as_reachedTV">SET GOAL AS REACHED</string>
    <string name="name_budgetTV">Name</string>
    <string name="budget_nameET">Budget Name</string>
    <string name="amount_budgetTV">Amount</string>
    <string name="budget_amountET">Budget Amount</string>
    <string name="periodTV">Period</string>
    <string name="notificationTV">Notification</string>
    <string name="budget_overspentSW">Budget Overspent</string>
    <string name="risk_of_overspendingSW">Risk of overspending</string>
    <string name="add_budgetBT">Add Budget</string>
    <string name="update_budgetBT">Update budget</string>
    <string name="name_goalTV">Name</string>
    <string name="goal_name_ET">Goal Name</string>
    <string name="target_amount_TV">Target Amount</string>
    <string name="target_amountET">Target Amount</string>
    <string name="saved_alreadyET">Saved already</string>
    <string name="notification_goal">Notification</string>
    <string name="goal_achievedTV">Goal Achieved</string>
    <string name="add_goalBT">Add Goal</string>
    <string name="update_goalBT">Update Goal</string>
    <string name="add_new_accountBT">Add new account</string>
    <string name="delete_accountBT">Delete account</string>
    <string name="budgetsTV">Budgets</string>
    <string name="budget_desTV">Start with Budgets to have an efficient overview of your spending limits.</string>
    <string name="create_budgetTV">CREATE BUDGET</string>
    <string name="goalsTV">Goals</string>
    <string name="goals_desTV">Set your goal and have a quick overview of your progress.</string>
    <string name="create_goalTV">CREATE GOAL</string>
    <string name="personal_finance_managerTV">Personal Finance Manager</string>
    <string name="wallet_desTV">Wallet is a personal finance management tool that helps you track your spending, so you stay in control and acheive your goals.</string>
    <string name="choose_your_currencyTV">Choose your currency</string>
    <string name="set_your_currency_symbolBT">Set your currency symbol</string>
    <string name="join_our_communityTV">Join our community</string>
    <string name="get_inspiredTV">Get inspired</string>
    <string name="work_with_usTV">Work with us</string>
    <string name="stay_in_touchTV">Stay in touch</string>
    <string name="Q1">What is Wallet app?</string>
    <string name="A1">Our app is a major project for our Software Engineering course. It is a personal finance management app that helps users control their spending and make more informed financial decisions. With our app, users can track their expenses and make better choices with their money.</string>
    <string name="Q2">Budgets and Goals</string>
    <string name="A2">Budget is a way for users to control their spending more efficiently and limit their spending during a specific period. Goal will help users to set target and save to achieve that target more effective.</string>
    <string name="Q3">Data Security</string>
    <string name="A3">All the data, user information and authentication are stored in Firestore database, Firebase cloud storage and Firebase authentication so it will get Google security level. No data from users will be used for personal purpose.</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="vietnamese">\ud83c\uddfb\ud83c\uddf3 Vietnamese</string>
    <string name="english">\ud83c\udff4\udb40\udc67\udb40\udc62\udb40\udc65\udb40\udc6e\udb40\udc67\udb40\udc7f English</string>
    <string name="japanese">\ud83c\uddef\ud83c\uddf5 Japanese</string>
    <string name="chinese">\ud83c\udde8\ud83c\uddf3 Chinese</string>
    <string name="set_your_languageBT">Set your language</string>
    <string name="tab0">Account</string>
    <string name="tab1"><![CDATA[Budgets & Goals]]></string>
    <string name="nav_home">Home</string>
    <string name="nav_currency">Currency</string>
    <string name="nav_languages">Languages</string>
    <string name="follow_us">Follow us</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="full_nameTV">Full name</string>
<<<<<<< HEAD
    <string name="numberTV">Number</string>
=======
    <string name="numberTV">Mobile Number</string>
>>>>>>> advertisal-ad
    <string name="email">Email</string>
    <string name="log_out">Log out</string>
    <string name="password_changeTV">PASSWORD CHANGE</string>
    <string name="password_desTV">Leave passwords empty, when you don\'t want to change it.</string>
    <string name="change_passwordBT">Change password</string>
    <string name="delete_all_user_data">DELETE ALL USER DATA</string>
    <string name="add_transactionTT">Add Transaction</string>
    <string name="calculatorTT">Calculator</string>
    <string name="add_accountTT">Add Account</string>
    <string name="add_savingTT">Add Saving</string>
    <string name="create_budgetTT">Create Budget</string>
    <string name="create_goalTT">Create Goal</string>
    <string name="delete_accountTT">Delete Account</string>
    <string name="profileTT">Profile</string>
    <string name="confirm_deleteTT">Delete all user data?</string>
    <string name="confirm_deleteContent">All your data will be lost.</string>
    <string name="confirm_deleteText">Delete!</string>
</resources>