<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddTransaction.AddTransactionActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transaction_amountTV"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/amountET"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/transaction_amount_hint"
                    android:digits="0123456789"
                    android:inputType="numberSigned" />

                <RadioGroup
                    android:id="@+id/typeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/expenseRadio"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/expense_radio" />

                    <RadioButton
                        android:id="@+id/incomeRadio"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/income_radio" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note_transactionTV"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/noteET"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/note_transaction_hint"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dateTV"
                        android:textColor="@color/grey" />

                    <EditText
                        android:id="@+id/dateET"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/timeTV"
                        android:textColor="@color/grey" />

                    <EditText
                        android:id="@+id/timeET"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categoryTV"
                    android:textColor="@color/grey" />

                <Spinner
                    android:id="@+id/categorySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addTransactionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/add_transactionBT" />

</LinearLayout>