<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".AddTransaction.AddTransactionActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_nameTV"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/accountNameET"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/name_accountTV" />

                <RadioGroup
                    android:id="@+id/typeRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/cashRadio"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/cash_radio" />

                    <RadioButton
                        android:id="@+id/bankRadio"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="@string/bank_radio" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initial_value_account_TV"
                    android:textColor="@color/grey" />

                <EditText
                    android:id="@+id/initValueET"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:digits="0123456789"
                    android:hint="100,000"
                    android:inputType="numberSigned" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/addAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:text="@string/add_accountBT" />

</LinearLayout>