<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    tools:context=".NavigationFragments.FollowFragment">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal" >

        <androidx.cardview.widget.CardView
            android:id="@+id/fbCV"
            android:layout_width="0dp"
            app:cardCornerRadius="6dp"
            android:layout_weight="1"
            android:layout_height="200dp" >

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/facebook_icon"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="Facebook"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/join_our_communityTV"
                    android:textColor="@color/bluer"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/instaCV"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="6dp"
            android:layout_weight="1"
            android:layout_height="200dp" >

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/instagram_icon"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="Instagram"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/get_inspiredTV"
                    android:textColor="@color/bluer"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:orientation="horizontal" >

        <androidx.cardview.widget.CardView
            android:id="@+id/ghCV"
            android:layout_width="0dp"
            app:cardCornerRadius="6dp"
            android:layout_weight="1"
            android:layout_height="200dp" >

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/github_icon"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="Github"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/work_with_usTV"
                    android:textColor="@color/bluer"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/twtCV"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            app:cardCornerRadius="6dp"
            android:layout_weight="1"
            android:layout_height="200dp" >

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_gravity="center"
                    android:src="@drawable/twitter_icon"
                    android:layout_height="80dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:text="Twitter"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="@string/stay_in_touchTV"
                    android:textColor="@color/bluer"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>